--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "test:e2e": "jest --config ./test/jest-e2e.json"
   },
   "dependencies": {
+    "@nestjs-modules/mailer": "^2.0.2",
     "@nestjs/common": "^9.0.0",
     "@nestjs/config": "^3.2.2",
     "@nestjs/core": "^9.0.0",
@@ -32,9 +33,12 @@
     "@nestjs/swagger": "^7.3.1",
     "@prisma/client": "^4.11.0",
     "@types/bcrypt": "^5.0.2",
+    "axios": "^1.7.2",
     "bcrypt": "^5.1.1",
     "date-fns": "^3.6.0",
+    "dotenv": "^16.4.5",
     "mongoose": "^8.4.1",
+    "multer": "^1.4.5-lts.1",
     "multer-gridfs-storage": "^5.0.2",
     "passport": "^0.7.0",
     "passport-jwt": "^4.0.1",
